# llm-decision-agent

./: KNOWN_GAPS.md  README.md  app.py  main.py  pyproject.toml  test_llm_integration.py
.kiro/specs/llm-decision-agent/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
agents/: __init__.py  constraint_filter.py  decision_engine.py  discovery.py  llm_adapter.py  recommendation.py
assets/: styles.css
models/: __init__.py  model_registry.yaml  registry.py  schemas.py
ui/: __init__.py  discovery_page.py  filtering_page.py  recommendation_page.py  scoring_page.py
utils/: ui_helpers.py
